--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
         <link rel = "stylesheet" href = "main.css">
     </head>
     <body>
-        <div id = "main_">
+        <div id = "assam_">
             <div class = "header">
                 <a class = "logo_"><img class = "logo_img" src = "./images/assem_logo_background.png"></a>
                 <div class = "menu_">
