--- a/last_page2_c.html
+++ b/last_page2_c.html
@@ -26,15 +26,20 @@
             <main class = "contents_">
                 <div id="s1" class = "scroll-area">
                     <h2>웹 개발</h2>
-                    <p fa-align-left>웹사이트를 만들고 운영하는 부서입니다.</p>
+                    <p>
+                        회원들이 팀을 이뤄 웹사이트를 디자인, 제작하고 직접 사이트를 운영하는 활동을 합니다.<br>
+                        이 과정에서 웹 개발을 하기 위해 필요한 지식들을 얻을 수 있으며 IT업계에서의 웹사이트를 제작하는 과정과 협업 과정을 미리 체험해볼 수 있습니다.
+                    </p>
                 </div>
                 <div id="s2" class = "scroll-area">
                     <h2>앱 개발</h2>
-                    <p>앱을 개발하고 운영하는 부서입니다.</p>
+                    <p>회원들이 팀을 이뤄 앱 콘텐츠 제작, 디자인, 앱 개발 등을 하고 이용자들에게 앱을 배포하는 활동을 합니다.<br>
+                        또한 여러 기관에서 개최하는 공모전이나 대회에 참가하여 상을 타는 것을 목표로 활동하고 있습니다.<br>
+                        이 과정에서 앱 개발을 하기 위해 필요한 지식들을 얻을 수 있으며 IT업계에서의 앱을 배포하는 과정과 제작 과정을 미리 체험해볼 수 있습니다.</p>
                 </div>
                 <div id="s3" class = "scroll-area">
                     <h2>머신러닝</h2>
-                    <p>어떤 활동을 하는지 아직 정확히 모름.</p>
+                    <p>머신러닝에 대한 공부 및 연구를 주로 하는 팀이다.</p>
                 </div>
             </main>
             <a href = "#s1" class = "to_top_">
