--- a/activity.html
+++ b/activity.html
@@ -7,7 +7,7 @@
             <title>Assem</title>
             <link rel = "shortcut icon" href = "./images/assem_logo_background.ico" type = "image/x-icon" sizes = "16x16">
             <link rel = "icon" href = "./images/assem_logo_background.ico" type = "immaeg/x-icon" sizes = "16x16">
-            <link rel = "stylesheet" href = "last_page2.css">
+            <link rel = "stylesheet" href = "activity.css">
     </head>
     <body class = "th_">
         <!-- 스크롤 내리면 그에 따른 스크립트로 위에 메뉴 없에고 옆에 x자를 나타내서 누르면 메뉴 나올수있게 온클릭 다른방법 -->
@@ -23,25 +23,20 @@
                     </ul>
                 </div>
             </div>
-            <main class = "contents_">
-                <div id="s1" class = "scroll-area">
-                    <h2>CTF</h2>
-                    <p>
-                        CTF 팀은 국내외 CTF 대회에 참가하기 위해 만든 팀으로 대회 입상이 목적이다.
-                    </p>
+            <div class = "activity_">
+                <div class = "selecter_">
+                    <div class = "select_item">All</div>
+                    <div class = "select_item">앱 개발</div>
+                    <div class = "select_item">웹 개발</div>
+                    <div class = "select_item">머신러닝</div>
+                    <div class = "select_item">CTF</div>
+                    <div class = "select_item">포렌식</div>
+                    <div class = "select_item">웹 해킹</div>
                 </div>
-                <div id="s2" class = "scroll-area">
-                    <h2>포렌식</h2>
-                    <p>포렌식과 관련된 자격증을 취득하고 실력을 키우는 부서입니다.</p>
+                <div class = "info_card">
+    
                 </div>
-                <div id="s3" class = "scroll-area">
-                    <h2>웹 해킹</h2>
-                    <p>웹 해킹에 필요한 기술들을 배우고 대회에 출전하는 등의 활동을 하는 부서입니다.</p>
-                </div>
-            </main>
-            <a href = "#s1" class = "to_top_">
-                <img src = "images/top_.png" style = "width: 30%;">
-            </a>
+            </div>
         </div>
     </body>
 </html>
