--- a/info_c.html
+++ b/info_c.html
@@ -7,7 +7,7 @@
             <title>Assem</title>
             <link rel = "shortcut icon" href = "./images/assem_logo_background.ico" type = "image/x-icon" sizes = "16x16">
             <link rel = "icon" href = "./images/assem_logo_background.ico" type = "immaeg/x-icon" sizes = "16x16">
-            <link rel = "stylesheet" href = "last_page2.css">
+            <link rel = "stylesheet" href = "last_page2_c.css">
     </head>
     <body class = "th_">
         <!-- 스크롤 내리면 그에 따른 스크립트로 위에 메뉴 없에고 옆에 x자를 나타내서 누르면 메뉴 나올수있게 온클릭 다른방법 -->
