--- a/main_info.html
+++ b/main_info.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel = "stylesheet" href = "./swiper.css">
+    <link rel = "stylesheet" href = "main_info.css">
   </head>
   <body class = "th_">
     <div id = "assem_">
