--- a/activity.html
+++ b/activity.html
@@ -25,13 +25,13 @@
             </div>
             <div class = "activity_">
                 <div class = "selecter_">
-                    <div class = "select_item">All</div>
-                    <div class = "select_item">앱 개발</div>
-                    <div class = "select_item">웹 개발</div>
-                    <div class = "select_item">머신러닝</div>
-                    <div class = "select_item">CTF</div>
-                    <div class = "select_item">포렌식</div>
-                    <div class = "select_item">웹 해킹</div>
+                    <div class = "select_item" id = "all">All</div>
+                    <div class = "select_item" id = "web">웹 개발</div>
+                    <div class = "select_item" id = "app">앱 개발</div>
+                    <div class = "select_item" id = "rm">머신러닝</div>
+                    <div class = "select_item" id = "CTF">CTF</div>
+                    <div class = "select_item" id = "fore">포렌식</div>
+                    <div class = "select_item" id = "hak">웹 해킹</div>
                 </div>
                 <div class = "info_card">
     
