--- a/activity.html
+++ b/activity.html
@@ -7,6 +7,10 @@
             <title>Assem</title>
             <link rel = "shortcut icon" href = "./images/assem_logo_background.ico" type = "image/x-icon" sizes = "16x16">
             <link rel = "icon" href = "./images/assem_logo_background.ico" type = "immaeg/x-icon" sizes = "16x16">
+            <script src = "https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity = "sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin = "anonymous"></script>
+            <link href = "https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel = "stylesheet" integrity = "sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin = "anonymous">
+            <script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity = "sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin = "anonymous"></script>
+            <script src = "https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity = "sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin = "anonymous"></script>
             <link rel = "stylesheet" href = "activity.css">
     </head>
     <body class = "th_">
@@ -33,8 +37,64 @@
                     <div class = "select_item" id = "fore">포렌식</div>
                     <div class = "select_item" id = "hak">웹 해킹</div>
                 </div>
-                <div class = "info_card">
-    
+                <div class = "info_card container">
+                    <div class = "row row-cols-1 row-cols-sm-3 row-cols-md-3 g-3">
+                        <div class = "col col_">
+                            <div class = "card card_">
+                                <img src = "https://src.hidoc.co.kr/image/lib/2022/5/12/1652337370806_0.jpg">
+                                <dic class = "card-body">
+                                    <p class = "card-title">Card title</p>
+                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
+                                </dic>
+                            </div>
+                        </div>
+                        <div class = "col col_">
+                            <div class = "card card_">
+                                <img src = "https://post-phinf.pstatic.net/MjAyMDAyMjlfMjY4/MDAxNTgyOTU0Nzg3MjQ4.PBMFV4WrSJmeSUJ56c4C7Vkz_SsQlJ1SByKU18kkJh0g.T7mQnadCWVtEZ448AGk_9kG1HFBAzdztXZcBjvSbduwg.JPEG/%EA%B3%A0%EC%96%91%EC%9D%B4_%EB%82%98%EC%9D%B41.jpg?type=w1200">
+                                <dic class = "card-body cb_">
+                                    <p class = "card-title">Card title</p>
+                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
+                                </dic>
+                            </div>
+                        </div>
+                        <div class = "col col_">
+                            <div class = "card card_">
+                                <img src = "https://src.hidoc.co.kr/image/lib/2022/5/4/1651651323632_0.jpg">
+                                <dic class = "card-body">
+                                    <p class = "card-title">Card title</p>
+                                    <!-- text fill-over -->
+                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
+                                </dic>
+                            </div>
+                        </div>
+                        <div class = "col col_">
+                            <div class = "card card_">
+                                <img src = "http://www.chemicalnews.co.kr/news/photo/202106/3636_10174_4958.jpg">
+                                <dic class = "card-body">
+                                    <p class = "card-title">Card title</p>
+                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
+                                </dic>
+                            </div>
+                        </div>
+                        <div class = "col col_">
+                            <div class = "card card_">
+                                <img src = "https://ichef.bbci.co.uk/news/800/cpsprodpb/E172/production/_126241775_getty_cats.png.webp">
+                                <dic class = "card-body">
+                                    <p class = "card-title">Card title</p>
+                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
+                                </dic>
+                            </div>
+                        </div>
+                        <div class = "col col_">
+                            <div class = "card card_">
+                                <img src = "https://images.mypetlife.co.kr/content/uploads/2022/05/27120923/52041878798_acf34e8861_b.jpg">
+                                <dic class = "card-body">
+                                    <p class = "card-title">Card title</p>
+                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
+                                </dic>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
