--- a/main_info.html
+++ b/main_info.html
@@ -55,12 +55,12 @@
               </div>
               <div class = "introduction_">
                 <div class="main_middle" onclick = "location.href='last_page2_c.html'">
-                  <a href = "last_page2.html">
+                  <a href = "info_c.html">
                     개발부에 대한 소개
                   </a>
                 </div>
                 <div class="main_bottom" onclick = "location.href='last_page2_s.html'">
-                  <a href = "last_page2.1.html">
+                  <a href = "info_s.html">
                     보안부에 대한 소개
                   </a>
                 </div>
