--- a/main_info.html
+++ b/main_info.html
@@ -54,12 +54,12 @@
                 </p>
               </div>
               <div class = "introduction_">
-                <div class="main_middle" onclick = "location.href='last_page2_c.html'">
+                <div class="main_middle" onclick = "location.href='info_c.html'">
                   <a href = "info_c.html">
                     개발부에 대한 소개
                   </a>
                 </div>
-                <div class="main_bottom" onclick = "location.href='last_page2_s.html'">
+                <div class="main_bottom" onclick = "location.href='info_s.html'">
                   <a href = "info_s.html">
                     보안부에 대한 소개
                   </a>
