--- a/main.html
+++ b/main.html
@@ -8,20 +8,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <!-- Link Swiper's CSS -->
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-    <link rel = "stylesheet" href = "main_info.css">
+    <link rel = "stylesheet" href = "main.css">
   </head>
   <body class = "th_">
     <div id = "assem_">
         <div id = "header">
-            <div class = "logo_"><img class = "logo_img" src = "images/assem_logo.png" href = "#"></div>
+          <div class = "logo_"><img class = "logo_img" src = "images/assem_logo.png" href = "#"></div>
             <div class = "menu_">
-                <ul>
-                    <li><a class = "about" href = "#">동아리 정보</a></li>
-                    <li><a class = "activity" href = "#">동아리 활동</a></li>
-                    <li><a class = "notice" href = "#">Q&A와 공지</a></li>
-                    <li><a class = "reference" href = "#">자료실</a></li>
-                </ul>
-            </div>
+              <ul>
+                <li><a class = "about" href = "#club_">동아리 정보</a></li>
+                <li><a class = "activity" href = "activity.html">동아리 활동</a></li>
+                <li><a class = "notice" href = "#">Q&A와 공지</a></li>
+                <li><a class = "reference" href = "#">자료실</a></li>
+            </ul>
+          </div>
         </div>
       <main class = "contents_">
         <div id = "swiper_" class = "scroll-area">
@@ -38,10 +38,8 @@
               <div class="swiper-slide">Slide 8</div>
               <div class="swiper-slide">Slide 9</div>
             </div>
-        <!-- <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div> -->
-        <div class="swiper-pagination"></div>
-      </div>
+            <div class="swiper-pagination"></div>
+          </div>
         </div>
         <div id = "club_" class = "scroll-area">
           <div class="bottom">
