--- a/activity.html
+++ b/activity.html
@@ -29,69 +29,107 @@
             </div>
             <div class = "activity_">
                 <div class = "selecter_">
-                    <div class = "select_item" id = "all">All</div>
-                    <div class = "select_item" id = "web">웹 개발</div>
-                    <div class = "select_item" id = "app">앱 개발</div>
-                    <div class = "select_item" id = "rm">머신러닝</div>
-                    <div class = "select_item" id = "CTF">CTF</div>
-                    <div class = "select_item" id = "fore">포렌식</div>
-                    <div class = "select_item" id = "hak">웹 해킹</div>
+                    <div class = "select_item tab" id = "all" onclick = "openMenu('all')">All</div>
+                    <div class = "select_item tab" id = "web" onclick = "openMenu('web')">웹 개발</div>
+                    <div class = "select_item tab" id = "app" onclick = "openMenu('app')">앱 개발</div>
+                    <div class = "select_item tab" id = "rm" onclick = "openMenu('rm')">머신러닝</div>
+                    <div class = "select_item tab" id = "CTF" onclick = "openMenu('CTF')">CTF</div>
+                    <div class = "select_item tab" id = "fore" onclick = "openMenu('fore')">포렌식</div>
+                    <div class = "select_item tab" id = "hak" onclick = "openMenu('hak')">웹 해킹</div>
                 </div>
+
+                <!-- 안되면 이걸로 -->
+                <!-- <div class = "second_section">
+                    <div class = "introduce_page">
+                        https://mash-up.kr/
+                        <fieldset id = "web" class = "web" style = "width: 100%; text-align: center;">
+                            웹 개발부에 대한 소개
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                            <br>
+                        </fieldset>
+                        <fieldset id = "app" class = "introduction" style = "width: 100%; text-align: center;">
+                            앱 개발부에 대한 소개
+                        </fieldset>
+                        <fieldset id = "ai" class = "introduction" style = "width: 100%; text-align: center;">
+                            ai 개발부에 대한 소개
+                        </fieldset>
+                    </div>
+                </div> -->
+
                 <div class = "info_card container">
                     <div class = "row row-cols-1 row-cols-sm-3 row-cols-md-3 g-3">
-                        <div class = "col col_">
+                        <div class = "col col_ cards_" href = "activity_detail.html">
                             <div class = "card card_">
                                 <img src = "https://src.hidoc.co.kr/image/lib/2022/5/12/1652337370806_0.jpg">
-                                <dic class = "card-body">
+                                <div class = "card-body">
                                     <p class = "card-title">Card title</p>
                                     <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
-                                </dic>
+                                </div>
                             </div>
                         </div>
-                        <div class = "col col_">
+                        <div class = "col col_ cards_">
                             <div class = "card card_">
                                 <img src = "https://post-phinf.pstatic.net/MjAyMDAyMjlfMjY4/MDAxNTgyOTU0Nzg3MjQ4.PBMFV4WrSJmeSUJ56c4C7Vkz_SsQlJ1SByKU18kkJh0g.T7mQnadCWVtEZ448AGk_9kG1HFBAzdztXZcBjvSbduwg.JPEG/%EA%B3%A0%EC%96%91%EC%9D%B4_%EB%82%98%EC%9D%B41.jpg?type=w1200">
-                                <dic class = "card-body cb_">
+                                <div class = "card-body cb_">
                                     <p class = "card-title">Card title</p>
                                     <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
-                                </dic>
+                                </div>
                             </div>
                         </div>
-                        <div class = "col col_">
+                        <div class = "col col_ cards_">
                             <div class = "card card_">
                                 <img src = "https://src.hidoc.co.kr/image/lib/2022/5/4/1651651323632_0.jpg">
-                                <dic class = "card-body">
+                                <div class = "card-body">
                                     <p class = "card-title">Card title</p>
                                     <!-- text fill-over -->
                                     <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
-                                </dic>
+                                </div>
                             </div>
                         </div>
-                        <div class = "col col_">
+                        <div class = "col col_ cards_">
                             <div class = "card card_">
                                 <img src = "http://www.chemicalnews.co.kr/news/photo/202106/3636_10174_4958.jpg">
-                                <dic class = "card-body">
+                                <div class = "card-body">
                                     <p class = "card-title">Card title</p>
                                     <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
-                                </dic>
+                                </div>
                             </div>
                         </div>
-                        <div class = "col col_">
+                        <div class = "col col_ cards_">
                             <div class = "card card_">
                                 <img src = "https://ichef.bbci.co.uk/news/800/cpsprodpb/E172/production/_126241775_getty_cats.png.webp">
-                                <dic class = "card-body">
+                                <div class = "card-body">
                                     <p class = "card-title">Card title</p>
                                     <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
-                                </dic>
+                                </div>
                             </div>
                         </div>
-                        <div class = "col col_">
+                        <div class = "col col_ cards_">
                             <div class = "card card_">
                                 <img src = "https://images.mypetlife.co.kr/content/uploads/2022/05/27120923/52041878798_acf34e8861_b.jpg">
-                                <dic class = "card-body">
+                                <div class = "card-body">
                                     <p class = "card-title">Card title</p>
                                     <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
-                                </dic>
+                                </div>
                             </div>
                         </div>
                     </div>
