--- a/activity.html
+++ b/activity.html
@@ -77,7 +77,7 @@
 
                 <div class = "info_card container">
                     <div class = "row row-cols-1 row-cols-sm-3 row-cols-md-3 g-3">
-                        <div class = "col col_ cards_" href = "activity_detail.html">
+                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
                             <div class = "card card_">
                                 <img src = "https://src.hidoc.co.kr/image/lib/2022/5/12/1652337370806_0.jpg">
                                 <div class = "card-body">
@@ -86,7 +86,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class = "col col_ cards_">
+                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
                             <div class = "card card_">
                                 <img src = "https://post-phinf.pstatic.net/MjAyMDAyMjlfMjY4/MDAxNTgyOTU0Nzg3MjQ4.PBMFV4WrSJmeSUJ56c4C7Vkz_SsQlJ1SByKU18kkJh0g.T7mQnadCWVtEZ448AGk_9kG1HFBAzdztXZcBjvSbduwg.JPEG/%EA%B3%A0%EC%96%91%EC%9D%B4_%EB%82%98%EC%9D%B41.jpg?type=w1200">
                                 <div class = "card-body cb_">
@@ -95,7 +95,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class = "col col_ cards_">
+                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
                             <div class = "card card_">
                                 <img src = "https://src.hidoc.co.kr/image/lib/2022/5/4/1651651323632_0.jpg">
                                 <div class = "card-body">
@@ -105,7 +105,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class = "col col_ cards_">
+                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
                             <div class = "card card_">
                                 <img src = "http://www.chemicalnews.co.kr/news/photo/202106/3636_10174_4958.jpg">
                                 <div class = "card-body">
@@ -114,7 +114,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class = "col col_ cards_">
+                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
                             <div class = "card card_">
                                 <img src = "https://ichef.bbci.co.uk/news/800/cpsprodpb/E172/production/_126241775_getty_cats.png.webp">
                                 <div class = "card-body">
@@ -123,7 +123,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class = "col col_ cards_">
+                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
                             <div class = "card card_">
                                 <img src = "https://images.mypetlife.co.kr/content/uploads/2022/05/27120923/52041878798_acf34e8861_b.jpg">
                                 <div class = "card-body">
