--- a/activity_detail.html
+++ b/activity_detail.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
         <!-- Link Swiper's CSS -->
         <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
-        <link rel="stylesheet" href="./page_detail.css">
+        <link rel="stylesheet" href="activity_detail.css">
     </head>
 
     <body class="th_">
@@ -43,7 +43,9 @@
                         </div>
                     </div>
                 </div>
-                <img src="images/main3.jpg" id="photo">
+                <div class = "img_container">
+                    <img src="images/main3.jpg" id="photo">
+                </div>
                 <div id="retrospect">팀 회고</div>
                 <div id="retrospect_box">
                     <div id="retrospect_main">
@@ -69,7 +71,8 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div id="bottom">
+                <!-- 일단 보류 나중에 좀 더 추가할 수 있으면 추가하기 
+                    <div id="bottom">
                     <button type="button" class="navyBtn" onClick="location.href='PAGENAME.html'"></button>
                     <button type="button" id="bottom_container" onClick="location.href='#'">
                         <div id="bottom_menu">
