--- a/activity.html
+++ b/activity.html
@@ -29,51 +29,16 @@
             </div>
             <div class = "activity_">
                 <div class = "selecter_">
-                    <div class = "select_item tab" id = "all" onclick = "openMenu('all')">All</div>
-                    <div class = "select_item tab" id = "web" onclick = "openMenu('web')">웹 개발</div>
-                    <div class = "select_item tab" id = "app" onclick = "openMenu('app')">앱 개발</div>
-                    <div class = "select_item tab" id = "rm" onclick = "openMenu('rm')">머신러닝</div>
-                    <div class = "select_item tab" id = "CTF" onclick = "openMenu('CTF')">CTF</div>
-                    <div class = "select_item tab" id = "fore" onclick = "openMenu('fore')">포렌식</div>
-                    <div class = "select_item tab" id = "hak" onclick = "openMenu('hak')">웹 해킹</div>
+                    <div class = "select_item tab" id = "all">All</div>
+                    <div class = "select_item tab" id = "web">웹 개발</div>
+                    <div class = "select_item tab" id = "app">앱 개발</div>
+                    <div class = "select_item tab" id = "rm">머신러닝</div>
+                    <div class = "select_item tab" id = "CTF">CTF</div>
+                    <div class = "select_item tab" id = "fore">포렌식</div>
+                    <div class = "select_item tab" id = "hak">웹 해킹</div>
                 </div>
 
-                <!-- 안되면 이걸로 -->
-                <!-- <div class = "second_section">
-                    <div class = "introduce_page">
-                        https://mash-up.kr/
-                        <fieldset id = "web" class = "web" style = "width: 100%; text-align: center;">
-                            웹 개발부에 대한 소개
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                            <br>
-                        </fieldset>
-                        <fieldset id = "app" class = "introduction" style = "width: 100%; text-align: center;">
-                            앱 개발부에 대한 소개
-                        </fieldset>
-                        <fieldset id = "ai" class = "introduction" style = "width: 100%; text-align: center;">
-                            ai 개발부에 대한 소개
-                        </fieldset>
-                    </div>
-                </div> -->
+                <!-- 탭 메뉴로 탭 이동 시키기 그리고 분류는 db에서 가져올때 태그를 사용해서 걸러서 가져오기 -->
 
                 <div class = "info_card container">
                     <div class = "row row-cols-1 row-cols-sm-3 row-cols-md-3 g-3">
