--- a/info_c.html
+++ b/info_c.html
@@ -16,10 +16,10 @@
                 <div class = "logo_"><img class = "logo_img" src = "images/assem_logo.png" href = "#"></div>
                 <div class = "menu_">
                     <ul>
-                        <li><a class = "about" href = "#">동아리 정보</a></li>
-                        <li><a class = "activity" href = "#">동아리 활동</a></li>
-                        <li><a class = "notice" href = "#">Q&A와 공지</a></li>
-                        <li><a class = "reference" href = "#">자료실</a></li>
+                        <li><a class = "about" href = "main.html">동아리 정보</a></li>
+                        <li><a class = "activity" href = "activity.html">동아리 활동</a></li>
+                        <li><a class = "notice" href = "Q&A.html">Q&A와 공지</a></li>
+                        <li><a class = "reference" href = "reference.html">자료실</a></li>
                     </ul>
                 </div>
             </div>
