--- a/main.html
+++ b/main.html
@@ -18,8 +18,8 @@
               <ul>
                 <li><a class = "about" href = "#club_">동아리 정보</a></li>
                 <li><a class = "activity" href = "activity.html">동아리 활동</a></li>
-                <li><a class = "notice" href = "#">Q&A와 공지</a></li>
-                <li><a class = "reference" href = "#">자료실</a></li>
+                <li><a class = "notice" href = "Q&A.html">Q&A와 공지</a></li>
+                <li><a class = "reference" href = "reference.html">자료실</a></li>
             </ul>
           </div>
         </div>
