--- a/membership_.html
+++ b/membership_.html
@@ -20,10 +20,10 @@
                     <img src = "images/assem_logo_background_edit.png">
                 </div>
                 <div class = "login_ ">
-                    <form method = "post" action = "./membership.php">
+                    <form method = "post" action = "./membership_.php">
                         <div class="mb-3">
                           <label class="form-label">학번</label> <!--for="exampleInputEmail1" -->
-                          <input type = "text" name = "id" class="form-control" aria-describedby="emailHelp"> <!--id="exampleInputEmail1" -->
+                          <input type = "text" name = "id" class="form-control"> <!--id="exampleInputEmail1" -->
                         </div>
                         <div class="mb-3">
                           <label class="form-label">비밀번호</label> <!--for="exampleInputPassword1"-->
