--- a/login.html
+++ b/login.html
@@ -34,7 +34,7 @@
                           <label class="form-check-label" for="exampleCheck1">Check me out</label>
                         </div> -->
                         <button type = "submit" class="btn btn-primary">로그인</button>
-                        <button type = "button" class = "btn btn-primary" onClick = "location.href = './membership_.html'">회원가입</button>
+                        <button type = "button" class = "btn btn-primary" onClick = "location.href = './membership.html'">회원가입</button>
                     </form>
                 </div>
             </div>
