--- a/membership.html
+++ b/membership.html
@@ -20,7 +20,7 @@
                     <img src = "images/assem_logo_background_edit.png">
                 </div>
                 <div class = "login_ ">
-                    <form method = "post" action = "./membership_.php">
+                    <form method = "post" action = "./membership.php">
                         <div class="mb-3">
                           <label class="form-label">학번</label> <!--for="exampleInputEmail1" -->
                           <input type = "text" name = "id" class="form-control"> <!--id="exampleInputEmail1" -->
