--- a/Q&A.html
+++ b/Q&A.html
@@ -80,7 +80,7 @@
                         <div class = "card" style = "width: 18rem;">
                             <div class = "card-body d-flex justify-content-between">
                                 <h5 class = "card-title">이메일</h5>
-                                <img src = "../email_icon_1/icons8-메일-작성-32.png">
+                                <img src = "./email_icon_1/icons8-메일-작성-32.png">
                             </div>
                         </div>
                     </div>
