--- a/activity_login.html
+++ b/activity_login.html
@@ -27,18 +27,47 @@
                     </ul>
                 </div>
             </div>
-            <div class = "activity_">
-                <div class = "selecter_">
-                    <div class = "select_item tab" id = "all">All</div>
-                    <div class = "select_item tab" id = "web">웹 개발</div>
-                    <div class = "select_item tab" id = "app">앱 개발</div>
-                    <div class = "select_item tab" id = "rm">머신러닝</div>
-                    <div class = "select_item tab" id = "CTF">CTF</div>
-                    <div class = "select_item tab" id = "fore">포렌식</div>
-                    <div class = "select_item tab" id = "hak">웹 해킹</div>
-                </div>
 
-                <!-- 탭 메뉴로 탭 이동 시키기 그리고 분류는 db에서 가져올때 태그를 사용해서 걸러서 가져오기 -->
+            <div class = "activity_">
+                <nav>
+                    <div id="underline"></div>
+                    <a href="#">ALL</a>
+                    <?php
+                        $sql_1 = "SELECT * FROM assem_activity";
+                        $result_1 = mysqli_query($db, $sql_1); // 전체니까 상관없이 그냥 전체 출력
+                    ?>
+                    <a href="#">웹 개발</a>
+                    <?php
+                        $sql_2 = "SELECT * FROM assem_activity WHERE department = '웹 개발';";
+                        $result_2 = mysqli_query($db, $sql_2);
+                        $num = $result_2['department'];
+                        echo 'success';
+                    ?>
+                    <a href="#">앱 개발</a><?php
+                        $sql_3 = "SELECT * FROM assem_activity WHERE department = '앱 개발';";
+                        $result_3 = mysqli_query($db, $sql_3);
+                    ?>
+                    <a href="#">머신러닝</a>
+                    <?php
+                        $sql_4 = "SELECT * FROM assem_activity WHERE department = '머신러닝';";
+                        $result_4 = mysqli_query($db, $sql_4);
+                    ?>
+                    <a href="#">CTF</a>
+                    <?php
+                        $sql_5 = "SELECT * FROM assem_activity WHERE department = 'CTF';";
+                        $result_5 = mysqli_query($db, $sql_5);
+                    ?>
+                    <a href="#">포렌식</a>
+                    <?php
+                        $sql_6 = "SELECT * FROM assem_activity WHERE department = '포렌식';";
+                        $result_6 = mysqli_query($db, $sql_6);
+                    ?>
+                    <a href="#">웹 해킹</a>
+                    <?php
+                        $sql_7 = "SELECT * FROM assem_activity WHERE department = '웹 해킹';";
+                        $result_7 = mysqli_query($db, $sql_7);
+                    ?>
+                </nav>
 
                 <div class = "info_card container">
                     <div class = "row row-cols-1 row-cols-sm-3 row-cols-md-3 g-3">
@@ -65,7 +94,6 @@
                                 <img src = "https://src.hidoc.co.kr/image/lib/2022/5/4/1651651323632_0.jpg">
                                 <div class = "card-body">
                                     <p class = "card-title">Card title</p>
-                                    <!-- text fill-over -->
                                     <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
                                 </div>
                             </div>
@@ -105,6 +133,101 @@
                     </button>
                 </div>
             </div>
+
+            <script type="text/javascript">
+                var underline = document.querySelector('#underline');
+                var item = document.querySelectorAll('nav a');
+                function select(event)
+                {
+                    // console.log(event);
+                    underline.style.left = event.offsetLeft+"px";
+                    underline.style.width = event.offsetWidth+"px";
+                    // console.log(e.offsetLeft+"px");
+                   
+                }
+                item.forEach(link =>
+                {
+                    link.addEventListener('click', (event)=>{
+                        select(event.target);
+                    })
+                })
+            </script>
+            <!-- <div class = "activity_">
+                <div class = "selecter_">
+                    <div class = "select_item tab" id = "all">All</div>
+                    <div class = "select_item tab" id = "web">웹 개발</div>
+                    <div class = "select_item tab" id = "app">앱 개발</div>
+                    <div class = "select_item tab" id = "rm">머신러닝</div>
+                    <div class = "select_item tab" id = "CTF">CTF</div>
+                    <div class = "select_item tab" id = "fore">포렌식</div>
+                    <div class = "select_item tab" id = "hak">웹 해킹</div>
+                </div>
+
+
+                <div class = "info_card container">
+                    <div class = "row row-cols-1 row-cols-sm-3 row-cols-md-3 g-3">
+                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
+                            <div class = "card card_">
+                                <img src = "https://src.hidoc.co.kr/image/lib/2022/5/12/1652337370806_0.jpg">
+                                <div class = "card-body">
+                                    <p class = "card-title">Card title</p>
+                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
+                            <div class = "card card_">
+                                <img src = "https://post-phinf.pstatic.net/MjAyMDAyMjlfMjY4/MDAxNTgyOTU0Nzg3MjQ4.PBMFV4WrSJmeSUJ56c4C7Vkz_SsQlJ1SByKU18kkJh0g.T7mQnadCWVtEZ448AGk_9kG1HFBAzdztXZcBjvSbduwg.JPEG/%EA%B3%A0%EC%96%91%EC%9D%B4_%EB%82%98%EC%9D%B41.jpg?type=w1200">
+                                <div class = "card-body cb_">
+                                    <p class = "card-title">Card title</p>
+                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
+                            <div class = "card card_">
+                                <img src = "https://src.hidoc.co.kr/image/lib/2022/5/4/1651651323632_0.jpg">
+                                <div class = "card-body">
+                                    <p class = "card-title">Card title</p>
+                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
+                            <div class = "card card_">
+                                <img src = "http://www.chemicalnews.co.kr/news/photo/202106/3636_10174_4958.jpg">
+                                <div class = "card-body">
+                                    <p class = "card-title">Card title</p>
+                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
+                            <div class = "card card_">
+                                <img src = "https://ichef.bbci.co.uk/news/800/cpsprodpb/E172/production/_126241775_getty_cats.png.webp">
+                                <div class = "card-body">
+                                    <p class = "card-title">Card title</p>
+                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class = "col col_ cards_" onclick = "location.href='activity_detail.html'">
+                            <div class = "card card_">
+                                <img src = "https://images.mypetlife.co.kr/content/uploads/2022/05/27120923/52041878798_acf34e8861_b.jpg">
+                                <div class = "card-body">
+                                    <p class = "card-title">Card title</p>
+                                    <p class = "card-text">내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳 내용 들어갈곳</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class = "write_">
+                    <button type = "button" class = "write_btn btn btn-primary" onClick = "location.href = './activity_write.html'">
+                        글쓰기
+                    </button>
+                </div>
+            </div> -->
         </div>
     </body>
 </html>
