--- a/activity_write.html
+++ b/activity_write.html
@@ -44,32 +44,35 @@
             <div class = "write_main">
                 <h3>동이라 활동 내역 쓰기</h3>
             </div>
-            <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example">
-                <option selected>Open this select menu</option>
-                <option value="1">웹 개발</option>
-                <option value="2">앱 개발</option>
-                <option value="3">머신러닝</option>
-                <option value="4">CTF</option>
-                <option value="5">포렌식</option>
-                <option value="6">웹 해킹</option>
-            </select>
             <table>
-                <form name="form" method="POST" action="/bulletin_wr">
-                    <tbody>
-                        <tr>
-                            <td>Title</td>
-                            <td><input type="text" name="title"></td>
-                        </tr>
-                        <tr>
-                            <td>Content</td>
-                            <td><textarea class = "summernote" name="contents">내용을 입력하세요</textarea></td>
-                        </tr>
-                        <tr>
-                            <td><input type="submit"></td>
-                        </tr>
-                    </tbody>
+                <form method = "POST" action = "./activity_write.php">
+                    <select class = "form-select form-select-lg mb-3" aria-label = ".form-select-lg example" type = "text" name = "department" >
+                        <option value = "none" disabled selected hidden>해당하는 부서를 고르시오</option>
+                        <option value = "웹 개발">웹 개발</option>
+                        <option value = "앱 개발">앱 개발</option>
+                        <option value = "머신러닝">머신러닝</option>
+                        <option value = "CTF">CTF</option>
+                        <option value = "포렌식">포렌식</option>
+                        <option value = "웹 해킹">웹 해킹</option>
+                    </select>
+                    <div class = "mb-3">
+                        <label class = "form-label">제목</label>
+                        <input type = "text" name = "title">
+                    </div>
+                    <div class = "mb-3">
+                        <label class = "from-label">내용</label>
+                        <div class = "summernote" name = "contents" type = "text"></div>
+                    </div>
+                    <button type = "submit" class = "btn btn-primary">글쓰기</button>
                 </form>
             </table>
         </div>
     </body>
+    <script>
+      $('.summernote').summernote({
+        placeholder: '내용을 입력하세요',
+        tabsize: 2,
+        height: 100
+      });
+    </script>
 </html>
